[tool.poetry]
name = "image_gen"
version = "0.1.0"
description = "Image Generation Streamlit App"
authors = ["oopshnik@gmail.com"]
packages = [{ include = "image_gen" }]  

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.30.0"
requests = "^2.31.0"
urllib3 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
