[tool.poetry]
name = "image_gen"
version = "0.1.0"
description = "A Streamlit app for AI image generation"
authors = ["oopshnik@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
