[tool.poetry]
name = "image_gen"
version = "0.1.0"
description = "An AI image generation app using Streamlit"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.42.1"
numpy = "^2.2.3"
pandas = "^2.2.3"
requests = "^2.32.3"
pillow = "^11.1.0"
torch = { version = "^2.2.0", optional = true }
diffusers = { version = "^0.26.3", optional = true }
transformers = { version = "^4.38.2", optional = true }

[tool.poetry.extras]
ai = ["torch", "diffusers", "transformers"]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
